# SeismoSense

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  render.yaml
backend/: .gitignore  README.md  auth.py  main.py  pyproject.toml  requirements.txt  stations_config.py  test_db_conn.py  ws_manager.py
backend/ai/: Earthquake.ipynb  Earthquake_______.ipynb  earthquake_model.tflite  training.ipynb
backend/ai/earthquake_model/: keras_metadata.pb  saved_model.pb
backend/ai/earthquake_model/.ipynb_checkpoints/: Earthquake-checkpoint.ipynb
backend/db/: base.py  connection.py  model.py  schemas.py
backend/kafka/: ca.pem  consumer.py  producer.py  service.cert  service.key
backend/kafka_integration/: consumer.py  producer.py
frontend/: Dockerfile  README.md  index.html  next.config.mjs  nginx.conf  package-lock.json  package.json  styles.css
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json
frontend/src/: App.jsx  Login.jsx  Number.jsx  OTP.jsx
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: AppShell.jsx  (+7 more)
(+116 files in other folders)
