[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiokafka>=0.12.0",
    "arviz>=0.17.1",
    "fastapi[all]>=0.128.5",
    "firebase==4.0.1",
    "firebase-admin>=6.5.0",
    "ipykernel>=6.31.0",
    "kafka-python>=2.0.0",
    "littlemcmc>=0.2.2",
    "mici>=0.2.1",
    "numpy>=1.26.4",
    "numpyro>=0.19.0",
    "obspy>=1.4.2",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.1",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.11.0",
    "pymc>=5.12.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=1.4.54",
    "tensorflow==2.10.0",
    "tensorflow-gpu==2.10.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tensorflow-probability>=0.25.0",
    "zeus-mcmc>=2.5.4",
]
